Implements v4.0.0
