# openapi.yaml
@@ -1,6 +1,6 @@
 openapi: "3.0.0"
 info:
-  version: 3.0.0
+  version: 4.0.0
   title: Jeera Project Manager
   license:
     name: MIT
@@ -323,28 +323,30 @@ paths:
               operationId: updateProjectTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
                 id: '$response.body#/id'
                 title: '$response.body#/title'
                 description: '$response.body#/description'
                 assignee: '$response.body#/assignee'
                 points: '$response.body#/points'
                 status: '$response.body#/status'
+                tags: '$response.body#/tags'
+                priority: '$response.body#/priority'
             delete:
               operationId: deleteProjectTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
             moveToQA:
               operationId: toQATask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
             complete:
               operationId: toDoneTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
         default:
           description: unexpected error
           content:
@@ -391,28 +393,30 @@ paths:
               operationId: updateProjectTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
                 id: '$response.body#/id'
                 title: '$response.body#/title'
                 description: '$response.body#/description'
                 assignee: '$response.body#/assignee'
                 points: '$response.body#/points'
                 status: '$response.body#/status'
+                tags: '$response.body#/tags'
+                priority: '$response.body#/priority'
             delete:
               operationId: deleteProjectTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
             moveToQA:
               operationId: toQATask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
             complete:
               operationId: toDoneTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
         default:
           description: unexpected error
           content:
@@ -493,7 +497,7 @@ paths:
       tags:
         - tasks
       parameters:
-        - name: createdAfter
+        - name: createdBefore
           in: query
           description: Minimum date of tasks to list
           required: false
@@ -588,28 +592,30 @@ paths:
               operationId: updateProjectTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
                 id: '$response.body#/id'
                 title: '$response.body#/title'
                 description: '$response.body#/description'
                 assignee: '$response.body#/assignee'
                 points: '$response.body#/points'
                 status: '$response.body#/status'
+                tags: '$response.body#/tags'
+                priority: '$response.body#/priority'
             delete:
               operationId: deleteProjectTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
             moveToQA:
               operationId: toQATask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
             complete:
               operationId: toDoneTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
         default:
           description: unexpected error
           content:
@@ -650,28 +656,30 @@ paths:
               operationId: updateProjectTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
                 id: '$response.body#/id'
                 title: '$response.body#/title'
                 description: '$response.body#/description'
                 assignee: '$response.body#/assignee'
                 points: '$response.body#/points'
                 status: '$response.body#/status'
+                tags: '$response.body#/tags'
+                priority: '$response.body#/priority'
             delete:
               operationId: deleteProjectTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
             moveToQA:
               operationId: toQATask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
             complete:
               operationId: toDoneTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
         default:
           description: unexpected error
           content:
@@ -697,18 +705,20 @@ paths:
               operationId: updateProjectTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
                 id: '$response.body#/id'
                 title: '$response.body#/title'
                 description: '$response.body#/description'
                 assignee: '$response.body#/assignee'
                 points: '$response.body#/points'
                 status: '$response.body#/status'
+                tags: '$response.body#/tags'
+                priority: '$response.body#/priority'
             complete:
               operationId: toDoneTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
         default:
           description: unexpected error
           content:
@@ -734,18 +744,20 @@ paths:
               operationId: updateProjectTask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
                 id: '$response.body#/id'
                 title: '$response.body#/title'
                 description: '$response.body#/description'
                 assignee: '$response.body#/assignee'
                 points: '$response.body#/points'
                 status: '$response.body#/status'
+                tags: '$response.body#/tags'
+                priority: '$response.body#/priority'
             moveToQA:
               operationId: toQATask
               parameters:
                 taskId: '$response.body#/id'
-                projectId: '$response.body#/projectId'
+                projectId: '$response.body#/parentProjectId'
         default:
           description: unexpected error
           content:
@@ -937,6 +949,13 @@ components:
           format: uuid
         status:
           $ref: '#/components/schemas/TaskStatusFreeToMove'
+        tags:
+          type: array
+          items:
+            type: string
+          maxItems: 6
+        priority:
+          $ref: '#/components/schemas/Priority'
       required: [ title, assignee ]
     TechnicalStoryUpdateRequest:
       type: object
@@ -954,6 +973,13 @@ components:
           format: uuid
         status:
           $ref: '#/components/schemas/TaskStatusFreeToMove'
+        tags:
+          type: array
+          items:
+            type: string
+          maxItems: 6
+        priority:
+          $ref: '#/components/schemas/Priority'
     TechnicalStory:
       type: object
       properties:
@@ -962,7 +988,7 @@ components:
           format: uuid
         title:
           type: string
-        projectId:
+        parentProjectId:
           type: string
           format: uuid
         description:
@@ -978,9 +1004,15 @@ components:
           format: date
         status:
           $ref: '#/components/schemas/TaskStatus'
+        tags:
+          type: array
+          items:
+            type: string
+        priority:
+          $ref: '#/components/schemas/Priority'
         updatesCount:
           type: integer
-      required: [ id, title, projectId, description, assignee, lastUpdate, status, updatesCount ]
+      required: [ id, title, parentProjectId, description, assignee, lastUpdate, status, updatesCount ]
     UserStoryCreationRequest:
       type: object
       properties:
@@ -1001,6 +1033,13 @@ components:
           maximum: 40
         status:
           $ref: '#/components/schemas/TaskStatusFreeToMove'
+        tags:
+          type: array
+          items:
+            type: string
+          maxItems: 6
+        priority:
+          $ref: '#/components/schemas/Priority'
       required: [ title, assignee, points ]
     UserStoryUpdateRequest:
       type: object
@@ -1022,6 +1061,13 @@ components:
           maximum: 40
         status:
           $ref: '#/components/schemas/TaskStatusFreeToMove'
+        tags:
+          type: array
+          items:
+            type: string
+          maxItems: 6
+        priority:
+          $ref: '#/components/schemas/Priority'
     UserStory:
       type: object
       properties:
@@ -1032,7 +1078,7 @@ components:
           type: string
         points:
           type: number
-        projectId:
+        parentProjectId:
           type: string
           format: uuid
         description:
@@ -1048,9 +1094,15 @@ components:
           format: date
         status:
           $ref: '#/components/schemas/TaskStatus'
+        tags:
+          type: array
+          items:
+            type: string
+        priority:
+          $ref: '#/components/schemas/Priority'
         updatesCount:
           type: integer
-      required: [ id, title, points, projectId, description, assignee, lastUpdate, status, updatesCount ]
+      required: [ id, title, points, parentProjectId, description, assignee, lastUpdate, status, updatesCount ]
     Task:
       oneOf:
         - $ref: '#/components/schemas/TechnicalStory'
@@ -1061,6 +1113,16 @@ components:
     TaskStatusFreeToMove:
       type: string
       enum: [ 'todo', 'in progress', 'review' ]
+    Priority:
+      type: string
+      enum:
+        - blocking
+        - critical
+        - important
+        - high
+        - medium
+        - low
+        - simple
     UserRole:
       type: string
       enum: 
